# minecraftFunctionGenerator

./: .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  Minecraft-function-generator.cpp  Minecraft-function-generator.sln  Minecraft-function-generator.vcxproj  Minecraft-function-generator.vcxproj.filters  README.md  build_test  lexer.hpp  parser.hpp  rex  rex.cpp  t  t.cpp  t.in  test.mfg
.github/workflows/: msvc.yml
ebnf/: ebnf.mfg
include/: backend.hpp  lexer.cpp  lexer.hpp  parser.hpp  tokens.hpp
parsec/src/: lib.rs  prelude.rs  utils.rs
src/: lib.rs  main.rs
src/ast/: expr.rs  ident.rs  literal.rs  mc_command.rs  mod.rs  number.rs  prelude.rs  punctuated.rs  statement.rs
src/lexer/: mod.rs  str_utils.rs  token.rs
src/token/: keywords.rs  mod.rs  prelude.rs  symbols.rs  white_spaces.rs
test/: lex.yy.cc  test.l
